bootstrap-daterange nan bug fix

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -20,7 +20,7 @@
   endDate=end
   timePicker=true
   timePickerSeconds=false
-  timePicker12Hour=false
+  timePicker24Hour=true
   timePickerIncrement=60
   disabled=false
   class="ember-view ember-text-field"
